--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
   "main": "src/index.tsx",
   "dependencies": {
     "@chakra-ui/icon": "3.0.0",
+    "@chakra-ui/icons": "^2.0.0",
     "@chakra-ui/react": "2.1.0",
     "@emotion/react": "11.9.0",
     "@emotion/styled": "11.8.1",
-    "framer-motion": "6.3.3",
+    "framer-motion": "^4.1.17",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "react-virtual": "^2.10.4"
   },
   "devDependencies": {
     "@types/react": "17.0.20",
-    "@types/react-dom": "17.0.9",
+    "@types/react-dom": "^17.0.17",
     "typescript": "4.4.2"
   },
   "scripts": {
